tests/More/Bad/10.tig
/* error - then-else types differ */
if (5>4) then 13 else " "


